# MiniJava

./: .gitignore  .gitignore~  CMakeLists.txt  Malloc.asm  MallocInit.asm  Print.asm  README.md  makefile  simplejava.l
Examples/: BinarySearch.java  BubbleSort.java  Factorial.java  IrTest.java  bin_tree.java
code/: common.h  dot.sh  main.cpp  makefile  report.txt  simplejava.l  simplejava.y
code/ASTVisitors/: Print.h  Printer.cpp  Printer.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  Translator.cpp  Translator.h  TypeChecker.cpp  TypeChecker.h  Visitor.h
code/IRVisitors/: CJumpOptimizer.h  Canonizer.cpp  Canonizer.h  CodeGenerator.cpp  CodeGenerator.h  Coloring.cpp  Coloring.h  JumpOptimizer.cpp  JumpOptimizer.h  Optimizer.cpp  Optimizer.h  PrintVisitor.h  Printer.cpp  Printer.h  RegAlloc.cpp  RegAlloc.h  Visitor.h
code/Structs/: Assembler.cpp  Assembler.h  Ast.cpp  Ast.h  BasicBlocks.cpp  BasicBlocks.h  Codegen.cpp  Codegen.h  FlowGraph.cpp  FlowGraph.h  Frame.cpp  Frame.h  Graph.h  Graph.hpp  IRTree.cpp  IRTree.h  InterferenceGraph.cpp  InterferenceGraph.h  Symbol.cpp  Symbol.h  SymbolsTable.cpp  SymbolsTable.h  Temp.cpp  Temp.h  TempMap.cpp  TempMap.h  TraceShedule.cpp  TraceShedule.h
code/Visitors/: IRPrintVisitor.h  IRVisitor.h  Print.h  PrintVisitor.h  SymbolTableBuilder.h  Translator.h  TypeChecker.h  Visitor.h
example_calc/: bison.y  flex.l  makefile
interpr/: interpr.cpp
simplejava/: CFrame.h  CPrintVisitor.h  CSymbol.h  CSymbolTableBuilder.h  CTypeChecker.h  CVisitor.h  IRTree.h  SymbolsTable.h  Temp.h  Translator.h  a.out  ast.h  lex.yy.cpp  main.cpp  makefile  report.txt  simplejava.l  simplejava.tab.cpp  simplejava.tab.hpp  simplejava.y  visitor.h
simplejava/Examples/: BinarySearch.java  BubbleSort.java  LinearSearch.java  factorial.java  linkedList.java
